--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./dist/      # This is the folder Vite creates
-          server-dir: ./public_html/  # This is where Hostinger serves files
+          server-dir: ./domains/admin.corgidetailing.com/public_html/
